--- a/package.json
+++ b/package.json
@@ -7,10 +7,21 @@
     "dev": "cross-env NODE_ENV=development tsx server/index-dev.ts",
     "build": "vite build && esbuild server/index-prod.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/index.js",
     "start": "cross-env NODE_ENV=production node dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage",
+    "generate:metric": "node ./scripts/generate-placeholder.js",
+    "generate:all": "node ./scripts/generate-placeholder.js all",
+    "analysis:all": "npm run generate:all",
+    "analysis:complexity": "node ./scripts/run-complexity.js",
+    "analysis:security": "node ./scripts/run-security.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+  "pg": "^8.11.0",
+  "passport-google-oauth20": "^2.0.0",
+  "passport-github2": "^0.1.12",
     "@anthropic-ai/sdk": "^0.71.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
@@ -46,6 +57,7 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/archiver": "^7.0.0",
+    "@types/multer": "^2.0.0",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -64,6 +76,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "openai": "^6.13.0",
     "passport": "^0.7.0",
@@ -85,6 +98,9 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "plato": "^1.7.0",
+    "vitest": "^1.1.6",
+    "@vitest/ui": "^0.3.3",
     "@replit/vite-plugin-cartographer": "^0.4.4",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
