--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
     "deploy": "node ./scripts/deploy.js"
   },
   "dependencies": {
-    "pg": "^8.11.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-github2": "^0.1.12",
     "@anthropic-ai/sdk": "^0.71.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mistralai/mistralai": "^1.10.0",
+    "@monaco-editor/react": "^4.7.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -75,6 +73,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^169.0.0",
     "groq-sdk": "^0.3.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
@@ -83,29 +83,29 @@
     "next-themes": "^0.4.6",
     "openai": "^6.13.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.11.0",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
-    "wouter": "^3.3.5",
     "winston": "^3.8.2",
+    "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "plato": "^1.7.0",
-    "snyk": "^1.1000.0",
-    "vitest": "^1.6.1",
-    "@vitest/ui": "^1.6.1",
     "@replit/vite-plugin-cartographer": "^0.4.4",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
@@ -121,14 +121,18 @@
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/ui": "^1.6.1",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
+    "plato": "^1.7.0",
     "postcss": "^8.4.47",
+    "snyk": "^1.1000.0",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+    "vitest": "^1.6.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
